time shift, explain/define abbreviations

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                   <td>12:20 – 12:30</td>
                   <td>🌟</td>
                   <td>
-                    <span class="talk"><a href="pre/paper03.pdf">The Cost of AI-Assisted Coding: Energy vs. Accuracy in Language Models</a></span>
+                    <span class="talk"><a href="pre/paper03.pdf">The Cost of <abbr title="Artificial Intelligence">AI</abbr>-Assisted Coding: Energy vs. Accuracy in Language Models</a></span>
                     <br>
                     <span class="presenter">Negar Alizadeh</span>,
                     <span class="presenter">Boris Belchev</span>,
@@ -187,7 +187,7 @@
                   <td>13:40 – 14:00</td>
                   <td>🚀</td>
                   <td>
-                    <span class="talk"><a href="pre/paper04.pdf">Bridging CPU and GPU in Rust</a></span>
+                    <span class="talk"><a href="pre/paper04.pdf">Bridging <abbr title="Central Processing Unit">CPU</abbr> and <abbr title="Graphics Processing Unit">GPU</abbr> in Rust</a></span>
                     <br>
                     <span class="presenter">Niek Aukes</span>,
                     <span class="presenter">Cristian-Andrei Begu</span>, and
@@ -230,17 +230,17 @@
                   </td>
                 </tr>
                 <tr>
-                  <td>14:30 – 14:50</td>
+                  <td>14:35 – 14:55</td>
                   <td>🚀</td>
                   <td>
-                    <span class="talk"><a href="pre/paper08.pdf">BRIDGE: Building Reliable Interfaces for Developer Guidance and Exploration through Static Analysis and LLM Translation</a></span>
+                    <span class="talk"><a href="pre/paper08.pdf">BRIDGE: Building Reliable Interfaces for Developer Guidance and Exploration through Static Analysis and <abbr title="Large Language Model">LLM</abbr> Translation</a></span>
                     <br>
                     <span class="presenter">Krishna Narasimhan</span> and
                     <span class="presenter">Mairieli Wessel</span>
                   </td>
                 </tr>
                 <tr>
-                  <td>14:50 – 15:00</td>
+                  <td>14:55 – 15:05</td>
                   <td>🌟</td>
                   <td>
                     <span class="talk"><a href="pre/paper09.pdf">On the Automation and Reuse Practices in GitHub Actions: Results of a Qualitative Survey</a></span>
@@ -339,7 +339,7 @@
                   <td>11:00 – 11:20</td>
                   <td>🔬</td>
                   <td>
-                    <span class="talk"><a href="pre/paper13.pdf">On the Evolution of Direct Dependencies in npm Packages</a></span>
+                    <span class="talk"><a href="pre/paper13.pdf">On the Evolution of Direct Dependencies in <code>npm</code> Packages</a></span>
                     <br>
                     <span class="presenter">Shahin Ebrahimi-Kia</span>,
                     <span class="presenter">Jesús M. González-Barahona</span>,
@@ -419,7 +419,7 @@
                   <td>14:30 – 14:50</td>
                   <td>🚀</td>
                   <td>
-                    <span class="talk"><a href="pre/paper18.pdf">Preliminary survey on CPS testing in various domains of the industry</a></span>
+                    <span class="talk"><a href="pre/paper18.pdf">Preliminary Survey on <abbr title="Cyber-Physical System">CPS</abbr> Testing in Various Domains of the Industry</a></span>
                     <br>
                     <span class="presenter">Guillaume Nguyen</span> and <span class="presenter">Xavier Devroey</span>
                   </td>
