--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                   <td>14:35 – 14:55</td>
                   <td>🚀</td>
                   <td>
-                    <span class="talk"><a href="pre/paper08.pdf">BRIDGE: Building Reliable Interfaces for Developer Guidance and Exploration through Static Analysis and <abbr title="Large Language Model">LLM</abbr> Translation</a></span>
+                    <span class="talk"><a href="pre/paper08.pdf">BRIDGE: Building Reliable Interfaces for Developer Guidance and Exploration through Static Analysis and <abbr title="Large Language Model">LLM</abbr> Translation</a> (cf. <a href="https://doi.org/10.18653/v1/2024.findings-acl.939" class="ext">ACL’24</a> &amp; <a href="https://github.com/krinara86/Bridge-Benevol" class="ext">GitHub</a>)</span>
                     <br>
                     <span class="presenter">Krishna Narasimhan</span> and
                     <span class="presenter">Mairieli Wessel</span>
@@ -243,7 +243,7 @@
                   <td>14:55 – 15:05</td>
                   <td>🌟</td>
                   <td>
-                    <span class="talk"><a href="pre/paper09.pdf">On the Automation and Reuse Practices in GitHub Actions: Results of a Qualitative Survey</a></span>
+                    <span class="talk"><a href="pre/paper09.pdf">On the Automation and Reuse Practices in GitHub Actions: Results of a Qualitative Survey</a> (cf. <a href="https://doi.org/10.1145/3643991.3644867" class="ext">MSR’24</a>)</span>
                     <br>
                     <span class="presenter">Hassan Onsori Delicheh</span>,
                     <span class="presenter">Guillaume Cardoen</span>,
