time for the dinner

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
             </td>
           </tr>
           <tr>
-            <td>17:00 +</td>
+            <td><strong class="red">18:00 – 21:00</strong></td>
             <td>Dinner at U Park Hotel</td>
           </tr>
           <tr class="sep">
