add slides + some links

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                   <td>15:30 – 15:50</td>
                   <td>🚀</td>
                   <td>
-                    <span class="talk"><a href="pre/paper10.pdf">On the Structuring of <span class="latex">L<span class="a">A</span>T<span class="e">E</span>X</span> Projects</a></span>
+                    <span class="talk"><a href="pre/paper10.pdf">On the Structuring of <span class="latex">L<span class="a">A</span>T<span class="e">E</span>X</span> Projects</a> (<a href="slides/deck10.pdf" class="ext">slides</a>)</span>
                     <br>
                     <span class="presenter">Wouter ten Brinke</span>,
                     <span class="presenter">Bart Griepsma</span>,
@@ -282,7 +282,7 @@
                   <td>15:50 – 16:10</td>
                   <td>🚀</td>
                   <td>
-                    <span class="talk"><a href="pre/paper11.pdf">ClassViz: From Verification Tool to Research Vessel</a></span>
+                    <span class="talk"><a href="pre/paper11.pdf">ClassViz: From Verification Tool to Research Vessel</a> (<a href="https://doi.org/10.1109/MSR59073.2023.00029" class="ext">MSR’23</a> &amp; <a href="https://github.com/rsatrioadi/classviz" class="ext">GitHub</a>)</span>
                     <br>
                     <span class="presenter">Satrio Adi Rukmono</span>
                   </td>
