--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#program">Programme</a>
+          <a class="nav-link js-scroll-trigger" href="#program-day2">Programme</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#community">Community</a>
@@ -311,6 +311,7 @@
           <tr>
             <th colspan="2">
               <div class="big-day">18</div>
+              <a name="program-day2" id="program-day2"></a>
               <div>Tuesday</div>
               <div>November 2025</div>
             </th>
