--- a/index.html
+++ b/index.html
@@ -302,8 +302,18 @@
             </td>
           </tr>
           <tr>
+            <td>17:00</td>
+            <td>
+              Group photos:
+              <br>
+              <a href="img/group-photo-ls.jpg"><img src="img/group-photo-thumb-ls.jpg"></a>
+              <br>
+              <a href="img/group-photo-vz.jpg"><img src="img/group-photo-thumb-vz.jpg"></a>
+            </td>
+          </tr>
+          <tr>
             <td>18:00 – 23:00</td>
-            <td>Dinner at U Park Hotel</td>
+            <td>🍜 Dinner at U Park Hotel</td>
           </tr>
           <tr class="sep">
             <td>&nbsp;</td>
