add slides for talk 7

--- a/index.html
+++ b/index.html
@@ -220,10 +220,14 @@
                   <td>14:20 – 14:30</td>
                   <td>🌟</td>
                   <td>
-                    <span class="talk"><a href="pre/paper07.pdf">A Method for Inferring Python Proficiency from Textbooks</a> (cf. <a href="https://doi.org/10.1109/ICSME58944.2024.00035" class="ext">ICSME’24</a> &amp; <a href="https://doi.org/10.1145/3524610.3527878" class="ext">ICPC’22</a>)</span>
+                    <span class="talk">
+                      <a href="pre/paper07.pdf">A Method for Inferring Python Proficiency from Textbooks</a>
+                      (cf. <a href="https://doi.org/10.1109/ICSME58944.2024.00035" class="ext">ICSME’24</a> &amp; <a href="https://doi.org/10.1145/3524610.3527878" class="ext">ICPC’22</a>)
+                      (<a href="slides/deck07.pdf" class="ext">🖥️slides</a>)
+                    </span>
                     <br>
                     <span class="presenter">Ruksit Rojpaisarnkit</span>,
-                    <span class="presenter">Gregorio Robles</span>,
+                    <u class="presenter">Gregorio Robles</u>,
                     <span class="presenter">Jesús M. González-Barahona</span>,
                     <span class="presenter">Kenichi Matsumoto</span>, and
                     <span class="presenter">Raula Gaikovina Kula</span>
@@ -269,7 +273,10 @@
                   <td>15:30 – 15:50</td>
                   <td>🚀</td>
                   <td>
-                    <span class="talk"><a href="pre/paper10.pdf">On the Structuring of <span class="latex">L<span class="a">A</span>T<span class="e">E</span>X</span> Projects</a> (<a href="slides/deck10.pdf" class="ext">slides</a>)</span>
+                    <span class="talk">
+                      <a href="pre/paper10.pdf">On the Structuring of <span class="latex">L<span class="a">A</span>T<span class="e">E</span>X</span> Projects</a>
+                      (<a href="slides/deck10.pdf" class="ext">🖥️slides</a>)
+                    </span>
                     <br>
                     <span class="presenter">Wouter ten Brinke</span>,
                     <span class="presenter">Bart Griepsma</span>,
