underline presenters, add a tool demo

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                   <td>
                     <span class="talk"><a href="pre/paper01.pdf">An Introduction to Indirect Code Completion</a></span>
                     <br>
-                    <span class="presenter">Nhat</span> and
+                    <u class="presenter">Nhat</u> and
                     <span class="presenter">Vadim Zaytsev</span>
                   </td>
                 </tr>
@@ -154,7 +154,7 @@
                   <td>
                     <span class="talk"><a href="pre/paper02.pdf">Same Size, Different Costs: Phase-Level Energy Variations in Transformer Models during Code Generation</a></span>
                     <br>
-                    <span class="presenter">Lola Solovyeva</span>
+                    <u class="presenter">Lola Solovyeva</u>
                   </td>
                 </tr>
                 <tr>
@@ -163,7 +163,7 @@
                   <td>
                     <span class="talk"><a href="pre/paper03.pdf">The Cost of <abbr title="Artificial Intelligence">AI</abbr>-Assisted Coding: Energy vs. Accuracy in Language Models</a></span>
                     <br>
-                    <span class="presenter">Negar Alizadeh</span>,
+                    <u class="presenter">Negar Alizadeh</u>,
                     <span class="presenter">Boris Belchev</span>,
                     <span class="presenter">Nishant Saurabh</span>, and
                     <span class="presenter">Patricia Kelbert</span>
@@ -189,7 +189,7 @@
                   <td>
                     <span class="talk"><a href="pre/paper04.pdf">Bridging <abbr title="Central Processing Unit">CPU</abbr> and <abbr title="Graphics Processing Unit">GPU</abbr> in Rust</a></span>
                     <br>
-                    <span class="presenter">Niek Aukes</span>,
+                    <u class="presenter">Niek Aukes</u>,
                     <span class="presenter">Cristian-Andrei Begu</span>, and
                     <span class="presenter">Georgiana Caltais</span>
                   </td>
@@ -200,7 +200,7 @@
                   <td>
                     <span class="talk"><a href="pre/paper05.pdf">Sampling Threat when Mining Generalizable Inter-Library Usage Patterns</a> (cf. <a href="https://doi.org/10.1016/j.scico.2025.103393" class="ext">SCP</a>)</span>
                     <br>
-                    <span class="presenter">Yunior Pacheco</span>,
+                    <u class="presenter">Yunior Pacheco</u>,
                     <span class="presenter">Coen De Roover</span>, and
                     <span class="presenter">Johannes Härtel</span>
                   </td>
@@ -211,7 +211,7 @@
                   <td>
                     <span class="talk"><a href="pre/paper06.pdf">An Analysis of Code Clones in GitHub Actions Workflows</a></span>
                     <br>
-                    <span class="presenter">Guillaume Cardoen</span>,
+                    <u class="presenter">Guillaume Cardoen</u>,
                     <span class="presenter">Alexandre Decan</span>, and
                     <span class="presenter">Tom Mens</span>
                   </td>
@@ -239,7 +239,7 @@
                   <td>
                     <span class="talk"><a href="pre/paper08.pdf">BRIDGE: Building Reliable Interfaces for Developer Guidance and Exploration through Static Analysis and <abbr title="Large Language Model">LLM</abbr> Translation</a> (cf. <a href="https://doi.org/10.18653/v1/2024.findings-acl.939" class="ext">ACL’24</a> &amp; <a href="https://github.com/krinara86/Bridge-Benevol" class="ext">GitHub</a>)</span>
                     <br>
-                    <span class="presenter">Krishna Narasimhan</span> and
+                    <u class="presenter">Krishna Narasimhan</u> and
                     <span class="presenter">Mairieli Wessel</span>
                   </td>
                 </tr>
@@ -249,7 +249,7 @@
                   <td>
                     <span class="talk"><a href="pre/paper09.pdf">On the Automation and Reuse Practices in GitHub Actions: Results of a Qualitative Survey</a> (cf. <a href="https://doi.org/10.1145/3643991.3644867" class="ext">MSR’24</a>)</span>
                     <br>
-                    <span class="presenter">Hassan Onsori Delicheh</span>,
+                    <u class="presenter">Hassan Onsori Delicheh</u>,
                     <span class="presenter">Guillaume Cardoen</span>,
                     <span class="presenter">Alexandre Decan</span>, and
                     <span class="presenter">Tom Mens</span>
@@ -282,7 +282,7 @@
                     <span class="presenter">Bart Griepsma</span>,
                     <span class="presenter">Aleksandra Ignatovič</span>,
                     <span class="presenter">Nhat</span>, and
-                    <span class="presenter">Vadim Zaytsev</span>
+                    <u class="presenter">Vadim Zaytsev</u>
                   </td>
                 </tr>
                 <tr>
@@ -291,7 +291,7 @@
                   <td>
                     <span class="talk"><a href="pre/paper11.pdf">ClassViz: From Verification Tool to Research Vessel</a> (<a href="https://doi.org/10.1109/MSR59073.2023.00029" class="ext">MSR’23</a> &amp; <a href="https://github.com/rsatrioadi/classviz" class="ext">GitHub</a>)</span>
                     <br>
-                    <span class="presenter">Satrio Adi Rukmono</span>
+                    <u class="presenter">Satrio Adi Rukmono</u>
                   </td>
                 </tr>
                 <tr>
@@ -300,7 +300,7 @@
                   <td>
                     <span class="talk"><a href="pre/paper12.pdf">Pseudonymization as a Service: Compartmentalizing and Controlling Data Processing in Evolving Systems with Micropseudonymization</a></span>
                     <br>
-                    <span class="presenter">Job Doesburg</span>,
+                    <u class="presenter">Job Doesburg</u>,
                     <span class="presenter">Bernard van Gastel</span>, and
                     <span class="presenter">Erik Poll</span>
                   </td>
@@ -359,7 +359,7 @@
                   <td>
                     <span class="talk"><a href="pre/paper13.pdf">On the Evolution of Direct Dependencies in <code>npm</code> Packages</a></span>
                     <br>
-                    <span class="presenter">Shahin Ebrahimi-Kia</span>,
+                    <u class="presenter">Shahin Ebrahimi-Kia</u>,
                     <span class="presenter">Jesús M. González-Barahona</span>,
                     <span class="presenter">David Moreno-Lumbreras</span>,
                     <span class="presenter">Gregorio Robles</span>, and
@@ -372,7 +372,7 @@
                   <td>
                     <span class="talk"><a href="pre/paper14.pdf">An Empirical Analysis of the GitHub Actions Language Usage and Evolution</a></span>
                     <br>
-                    <span class="presenter">Aref Talebzadeh Bardsiri</span>,
+                    <u class="presenter">Aref Talebzadeh Bardsiri</u>,
                     <span class="presenter">Alexandre Decan</span>, and
                     <span class="presenter">Tom Mens</span>
                   </td>
@@ -398,7 +398,7 @@
                   <td>
                     <span class="talk"><a href="pre/paper16.pdf">On the Transferability of a Bot Detection Model from GitHub to GitLab</a></span>
                     <br>
-                    <span class="presenter">Cyril Moreau</span>
+                    <u class="presenter">Cyril Moreau</u>
                   </td>
                 </tr>
                 <tr>
@@ -407,7 +407,7 @@
                   <td>
                     <span class="talk"><a href="pre/paper17.pdf">Evolution-Resilient Class Contours</a></span>
                     <br>
-                    <span class="presenter">Mattia Giannaccari</span> and
+                    <u class="presenter">Mattia Giannaccari</u> and
                     <span class="presenter">Marco Raglianti</span>
                   </td>
                 </tr>
@@ -503,6 +503,15 @@
                     <span class="talk"><a href="https://github.com/omersayilir75/CPSDSL" class="ext">CPSLint</a></span>
                     by
                     <span class="presenter">Ömer Sayilir</span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>TBD</td>
+                  <td>🔧</td>
+                  <td>
+                    <span class="talk"><a href="https://github.com/NiekAukes/rust-gpu-hybrid-compiler" class="ext">rust-gpu-hybrid-compiler</a></span>
+                    by
+                    <span class="presenter">Niek Aukes</span>
                   </td>
                 </tr>
               </table>
