fix: Group images break mobile layout

--- a/index.html
+++ b/index.html
@@ -304,11 +304,15 @@
           <tr>
             <td>17:00</td>
             <td>
-              Group photos:
-              <br>
-              <a href="img/group-photo-ls.jpg"><img src="img/group-photo-thumb-ls.jpg"></a>
-              <br>
-              <a href="img/group-photo-vz.jpg"><img src="img/group-photo-thumb-vz.jpg"></a>
+              <strong>Group photos</strong>
+              <div class="images-col" style="padding-top: 1em;">
+                <a href="img/group-photo-ls.jpg" target="_blank" class="img-link">
+                    <img src="img/group-photo-thumb-ls.jpg">
+                </a>
+                <a href="img/group-photo-vz.jpg" target="_blank" class="img-link">
+                    <img src="img/group-photo-thumb-vz.jpg">
+                </a>
+              </div>
             </td>
           </tr>
           <tr>
