add slides for talk 4

--- a/index.html
+++ b/index.html
@@ -187,7 +187,10 @@
                   <td>13:40 – 14:00</td>
                   <td>🚀</td>
                   <td>
-                    <span class="talk"><a href="pre/paper04.pdf">Bridging <abbr title="Central Processing Unit">CPU</abbr> and <abbr title="Graphics Processing Unit">GPU</abbr> in Rust</a></span>
+                    <span class="talk">
+                      <a href="pre/paper04.pdf">Bridging <abbr title="Central Processing Unit">CPU</abbr> and <abbr title="Graphics Processing Unit">GPU</abbr> in Rust</a>
+                      (<a href="slides/deck04.pdf" class="ext">🖥️slides</a>)
+                    </span>
                     <br>
                     <u class="presenter">Niek Aukes</u>,
                     <span class="presenter">Cristian-Andrei Begu</span>, and
